Fixed alignment issues on Cart screen

--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -520,9 +520,12 @@ select {
     width: 220px;
 }
 
-
-/* --- Modificações necessárias : Sabrina;  */
 .put-right {
+    margin-right: 0;
+    float: right;
+}
+
+.align-right {
     margin-right: 0;
     float: right;
 }
@@ -568,3 +571,8 @@ select {
     z-index: -1;
 }
 /******************************************************************/
+
+.cart-total {
+    font-size: 24px;
+    margin: 0;
+}
